@@ -8,6 +8,7 @@ Unreleased
 
 - Set kameleon build --microstep-checkpoint option to all by default.
 - Rework the kameleon checkpoint documentation.
+- Rework the kameleon build options.
 
 Version 2.10.9
 --------------
